--- a/Правила.md
+++ b/Правила.md
@@ -5,7 +5,7 @@
 3. Можешь помочь - помоги!
 4. Критикуй конструктивно и если этого просят, предлагай решения.
 5. Запрещены оценочные суждения. Рассуждать нужно не в концепциях добра и зла, а в концепции эффективности.
-6. За мной остается право изменять и дорабатывать эти правила в одностороннем порядке
+6. За мной остается право изменять и дорабатывать эти правила в одностороннем порядке.
 
 
 
