--- a/Правила.md
+++ b/Правила.md
@@ -12,8 +12,8 @@
 ### Правила ведения споров:
 
 1. Споры - это хорошо, но они должны быть конструктивны и беспристрастны.
-2. Для спора ты и той оппонент должны открыть тред.
+2. Для спора ты и твой оппонент должны открыть тред.
 3. Спор должен закончится тем, что будет найдена и доказана мысль/тезис.
-4. Ты не должен закрывать тред, любой делающий должен иметь возможность конструктивно оспорить ваш вывод.
-5. Вывод должен быть закреплен, если он был оспорен, то закреплены должен быть новый тезис.
+4. Ты не должен закрывать тред, любой желающий должен иметь возможность конструктивно оспорить ваш вывод.
+5. Вывод должен быть закреплен, если он был оспорен, то закреплен должен быть новый тезис.
 6. Закреплений вывод должен содержать все источники и приложения, способствующие пришествию к нему, ход мысли и его результат.
